<resources>
    <string name="app_name">Fat Percentage Calculator</string>
    <string name="gender">Пол*</string>
    <string name="male_gender">Мужской</string>
    <string name="female_gender">Женский</string>
    <string name="weight">Вес*</string>
    <string name="kilo">Кг</string>
    <string name="height">Рост*</string>
    <string name="sm">См</string>
    <string name="age">Возраст*</string>
    <string name="years">Лет</string>
    <string name="neck_girth">Обхват шеи</string>
    <string name="waist_girth">Обхват талии</string>
    <string name="forearm_girth">\tОбхват\n предплечья</string>
    <string name="wrist_grith">Обхват запястья</string>
    <string name="hips_girth">Обхват бёдер</string>
    <string name="hip_girth">Обхват бедра</string>
    <string name="shin_girth">Обхват голени</string>
    <string name="calculate_fat_percentage">Рассчитать % жира</string>
</resources>