<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/Her"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/gender"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/GenderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TextViewGender"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/GenderMaleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/male_gender"

                    android:textSize="@dimen/standard_text_size" />

                <RadioButton
                    android:id="@+id/GenderFemaleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding"
                    android:text="@string/female_gender"

                    android:textSize="@dimen/standard_text_size" />


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/TextViewWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:padding="@dimen/text_padding"
                android:text="@string/weight"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                tools:ignore="SpeakableTextPresentCheck"
                />

            <TextView
                android:id="@+id/TextViewKilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"

                android:padding="@dimen/text_padding"
                android:text="@string/kilo"
                android:textSize="@dimen/standard_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/TextViewHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/text_padding"
                android:text="@string/height"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/TextViewSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"

                android:padding="@dimen/text_padding"
                android:text="@string/sm"
                android:textSize="@dimen/standard_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/TextViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:padding="@dimen/text_padding"

                android:text="@string/age"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/TextViewYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:textAlignment="textEnd"

                android:padding="@dimen/text_padding"
                android:text="@string/years"
                android:textSize="@dimen/standard_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/TextViewNeckGirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:padding="@dimen/text_padding"
                android:text="@string/neck_girth"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/editTextNeckSm"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_style"
                android:padding="@dimen/text_padding"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/TextViewNeckSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:padding="@dimen/text_padding"
                android:text="@string/sm"
                android:textSize="@dimen/standard_text_size"
                android:textAlignment="textEnd"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewWaistGirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/text_padding"
                android:text="@string/waist_girth"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/editTextWaistSm"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/TextViewWaistSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"

                android:padding="@dimen/text_padding"
                android:text="@string/sm"
                android:textSize="@dimen/standard_text_size" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewForearmGirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/text_padding"
                android:text="@string/forearm_girth"

                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/editTextForearmSm"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:background="@drawable/edit_text_style"
                android:inputType="number"

                android:padding="@dimen/text_padding"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/TextViewForearmSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"

                android:layout_weight="1"
                android:padding="@dimen/text_padding"
                android:text="@string/sm"
                android:textSize="@dimen/standard_text_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewWristGirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/text_padding"
                android:text="@string/wrist_grith"
                android:textSize="@dimen/standard_text_size" />

            <EditText
                android:id="@+id/editTextWristSm"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/TextViewWristSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"

                android:padding="@dimen/text_padding"
                android:text="@string/sm"
                android:textSize="@dimen/standard_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewHipsGirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/hips_girth"
                android:textSize="@dimen/standard_text_size"
                android:layout_weight="1"
                />

            <EditText
                android:id="@+id/editTextHipsSm"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                android:layout_weight="1"

                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/TextViewHipsSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/sm"
                android:textAlignment="textEnd"

                android:textSize="@dimen/standard_text_size"
                android:layout_weight="1"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewHipGirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/hip_girth"
                android:textSize="@dimen/standard_text_size"
                android:visibility="visible"
                android:layout_weight="1"
                />

            <EditText
                android:id="@+id/editTextHipSm"
                android:layout_width="@dimen/edit_text_size"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                android:visibility="visible"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/TextViewHipSm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/sm"
                android:textSize="@dimen/standard_text_size"
                android:visibility="visible"
                android:textAlignment="textEnd"

                android:layout_weight="1"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TextViewShinGirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/shin_girth"
            android:textSize="@dimen/standard_text_size"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/editTextShinSm"
            android:layout_width="@dimen/edit_text_size"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:inputType="number"
            android:padding="@dimen/text_padding"
            android:layout_weight="1"

            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/TextViewShinSm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/sm"
            android:textSize="@dimen/standard_text_size"
            android:textAlignment="textEnd"

            android:layout_weight="1"
             />
        </LinearLayout>

        <Button
            android:id="@+id/ButtonCalculate"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:text="@string/calculate_fat_percentage"
            android:layout_gravity="center"
             />
    </LinearLayout>
</ScrollView>




